# Pi-Face-Recog

./: CMakeLists.txt
src/: TArcface.cpp  TLive.cpp  TMtCNN.cpp  hmm.cpp  main.cpp
